email validation flow

--- a/src/views/welcome/welcome.ejs
+++ b/src/views/welcome/welcome.ejs
@@ -665,7 +665,7 @@
                                   <div align="center" class="alignment">
                                     <!--[if mso]><v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="#" style="height:51px;width:179px;v-text-anchor:middle;" arcsize="30%" stroke="false" fillcolor="#fc7318"><w:anchorlock/><v:textbox inset="0px,0px,0px,0px"><center style="color:#ffffff; font-family:Tahoma, Verdana, sans-serif; font-size:16px"><!
                                     [endif]--><a
-                                      href="#"
+                                      href="http://localhost:5173/email-validate?token=<%= verifyToken %>"
                                       style="
                                         text-decoration: none;
                                         display: inline-block;
